Pull request #392: Mtokar MCA-3308 reconnection events
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-3308-reconnection-events to master

Squashed commit of the following:

commit d5b85cf64af05f730ce122c2b8acec571e551d8f
Merge: ccfdddb7 676dabdd
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Oct 17 10:15:02 2023 +0200

    Merge branch 'mtokar-MCA-3311_rtc_ui_design_update_missing_translations' into mtokar-MCA-3308-reconnection-events

    # Conflicts:
    #	infobip-rtc-ui/src/main/res/values-ar/strings.xml
    #	infobip-rtc-ui/src/main/res/values-cs/strings.xml
    #	infobip-rtc-ui/src/main/res/values-da/strings.xml
    #	infobip-rtc-ui/src/main/res/values-de/strings.xml
    #	infobip-rtc-ui/src/main/res/values-es/strings.xml
    #	infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
    #	infobip-rtc-ui/src/main/res/values-fr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hi/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hu/strings.xml
    #	infobip-rtc-ui/src/main/res/values-in/strings.xml
    #	infobip-rtc-ui/src/main/res/values-it/strings.xml
    #	infobip-rtc-ui/src/main/res/values-iw/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ja/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ko/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ms/strings.xml
    #	infobip-rtc-ui/src/main/res/values-nl/strings.xml
    #	infobip-rtc-ui/src/main/res/values-pl/strings.xml
    #	infobip-rtc-ui/src/main/res/values-pt/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ro/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ru/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sk/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sq/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sv/strings.xml
    #	infobip-rtc-ui/src/main/res/values-th/strings.xml
    #	infobip-rtc-ui/src/main/res/values-tr/strings.xml
 

--- a/infobip-rtc-ui/src/main/res/values-ar/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ar/strings.xml
@@ -27,4 +27,7 @@
     <string name="mm_video_call">مكالمة فيديو</string>
     <string name="mm_video_permission_required">مطلوب إذن الكاميرا لمكالمات الفيديو.</string>
     <string name="mm_your_microphone_is_muted">تم كتم صوت الميكروفون</string>
+    <string name="mm_you_are_sharing_a_screen">أنت تشارك شاشة.</string>
+    <string name="mm_stop_sharing_screen"><u>إيقاف مشاركة الشاشة</u></string>
+    <string name="mm_connection_problems">تم قطع المكالمة. جارٍ محاولة إعادة الاتصال…</string>
 </resources>
