--- a/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
@@ -28,4 +28,7 @@
     <string name="mm_video_call">Videopuhelu</string>
     <string name="mm_video_permission_required">Videopuheluihin tarvitaan kameran lupa.</string>
     <string name="mm_your_microphone_is_muted">Mikrofonisi on mykistetty</string>
+    <string name="mm_you_are_sharing_a_screen">Olet jakamassa näytön.</string>
+    <string name="mm_stop_sharing_screen"><u>Lopeta näytön jakaminen</u></string>
+    <string name="mm_connection_problems">Puhelu katkesi. Yritetään yhdistää uudelleen…</string>
 </resources>
