--- a/infobip-rtc-ui/src/main/res/values-in/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-in/strings.xml
@@ -28,4 +28,7 @@
     <string name="mm_video_call">Panggilan video</string>
     <string name="mm_video_permission_required">Izin kamera diperlukan untuk panggilan video.</string>
     <string name="mm_your_microphone_is_muted">Mikrofon Anda dibisukan</string>
+    <string name="mm_you_are_sharing_a_screen">Anda berbagi layar.</string>
+    <string name="mm_stop_sharing_screen"><u>Berhenti berbagi layar</u></string>
+    <string name="mm_connection_problems">Panggilan terputus. Mencoba menyambung kembali…</string>
 </resources>
