--- a/infobip-rtc-ui/src/main/res/values-tr/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-tr/strings.xml
@@ -27,4 +27,7 @@
     <string name="mm_video_call">Görüntülü arama</string>
     <string name="mm_video_permission_required">Görüntülü aramalar için kamera izni gereklidir.</string>
     <string name="mm_your_microphone_is_muted">Mikrofonunuzun sesi kapatıldı</string>
+    <string name="mm_you_are_sharing_a_screen">Bir ekranı paylaşıyorsunuz.</string>
+    <string name="mm_stop_sharing_screen"><u>Ekranı paylaşmayı durdur</u></string>
+    <string name="mm_connection_problems">Arama bağlantısı kesildi. Yeniden bağlanmaya çalışılıyor…</string>
 </resources>
